# gemini-cli

./: .envrc  .gitignore  Makefile  README.md  default.nix  flake.nix  gemini-cli-example.toml  pyproject.toml  requirements.txt
.github/workflows/: python-publish.yml
gemini_cli/: __init__.py  __main__.py  cli.py  gemini.py
src/gemini_cli/: __init__.py  cli.py
