[tool.poetry]
name = "gemini-cli"
version = "0.1.0"
description = "google gemini api for terminal (CLI)"
authors = ["hitsmaxft <mfthits@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
google-generativeai = "^0.3.2"
toml = "^0.10.2"
rich = "^13.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gemini-cli =  "gemini_cli:main"
