[project.urls]

Homepage = "https://github.com/hitsmaxft/gemini-cli"

[tool.poetry]
name = "gemini-cli"
version = "0.2.1"
description = "google gemini api for terminal (CLI)"
authors = ["hitsmaxft <mfthits@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "gemini_cli", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
google-generativeai = "^0.3.2"
toml = "^0.10.2"
rich = "^13.7.0"


[tool.poetry.group.dev.dependencies]
twine = "^4.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gemini-cli =  "gemini_cli:main"
